--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
       <header>
         <nav>
           <a href="#"><img class="logo" src="img/lambda-black.png"></a>
-          <a href="#">Home</a>
+          <a href="index.html">Home</a>
           <a href="#">About</a>
           <a href="#">Products</a>
           <a href="#">Blog</a>
